feat(basic): remove code exposing basic build info
