# docs/swagger.yaml
@@ -5,6 +5,47 @@ components:
     requestBodies: {}
     responses: {}
     schemas:
+        BuildDefinitionMetadata:
+            properties:
+                id:
+                    type: string
+                    description: 'Id should be unique in parent space.'
+                name:
+                    type: string
+                    description: 'Display name'
+                webUrl:
+                    type: string
+                    description: 'Webpage that provides user with detailed information about this build definition.'
+                folder:
+                    type: string
+                    description: 'Path to the build definition, e.g. "my folder/sub-folder".'
+            required:
+                - id
+                - name
+            type: object
+            additionalProperties: false
+        SpaceMetadata:
+            description: "Space is a logical container of build definitions. For most servers, space will map to a project or source control repository.\n\nCatLight apps exchange information about build investigations on space level. If your server has thousands of build definitions, put them into separate spaces to avoid performance problems."
+            properties:
+                id:
+                    type: string
+                    description: 'Space id should be unique on the server.'
+                name:
+                    type: string
+                    description: 'Display name'
+                buildDefinitions:
+                    items:
+                        $ref: '#/components/schemas/BuildDefinitionMetadata'
+                    type: array
+                webUrl:
+                    type: string
+                    description: 'Url of the space page.'
+            required:
+                - id
+                - name
+                - buildDefinitions
+            type: object
+            additionalProperties: false
         User:
             properties:
                 name:
@@ -18,6 +59,41 @@ components:
                 - id
             type: object
             additionalProperties: false
+        ServerMetadata:
+            properties:
+                protocol:
+                    type: string
+                    enum:
+                        - 'https://catlight.io/protocol/v1.0/dynamic'
+                    nullable: false
+                    description: 'Constant string that defines the version and mode of CatLight protocol.'
+                id:
+                    type: string
+                    description: "Globally unique server id.\n\nServer id must be globally unique and should not change.\n\n# How to choose server id?\nFor online services, you can use your domain name, e.g. \"myserver.com\"\nFor installed servers, use your domain or product name + unique installation id. For example, \"myserver.com/3A5126E7-EE74-48E4-9997-1C1DE52BA711\". If your server does not have unique id, you can generate a GUID during installation and save it to configuration file.\n\nTry to keep the id shorter than 100 symbols. If your server has a built-in unique id that is very long, you can use a hash sum of it that should be shorter."
+                name:
+                    type: string
+                    description: 'Display name of the server that is shown to the user.'
+                spaces:
+                    items:
+                        $ref: '#/components/schemas/SpaceMetadata'
+                    type: array
+                webUrl:
+                    type: string
+                    description: 'Url of the main server page.'
+                serverVersion:
+                    type: string
+                currentUser:
+                    $ref: '#/components/schemas/User'
+                    description: 'Currently logged-in user. If it is absent, build investigation feature will not be available.'
+            required:
+                - protocol
+                - id
+                - name
+                - spaces
+            type: object
+            additionalProperties: false
+        DynamicBuildInfoMetadataResponse:
+            $ref: '#/components/schemas/ServerMetadata'
         Build:
             properties:
                 id:
@@ -77,164 +153,6 @@ components:
                 - builds
             type: object
             additionalProperties: false
-        BuildDefinition:
-            properties:
-                id:
-                    type: string
-                    description: 'Id should be unique in parent space.'
-                name:
-                    type: string
-                    description: 'Display name'
-                branches:
-                    items:
-                        $ref: '#/components/schemas/BuildBranch'
-                    type: array
-                    description: "Branches array should include:\n\nPrimary branches (master, develop, etc.)\nActive feature branches that had builds in the past 30 days.\n\nIf your system cannot separate builds into branches, add a single branch to this array with id = \"~all\""
-                webUrl:
-                    type: string
-                    description: 'Webpage that provides user with detailed information about this build definition.'
-                folder:
-                    type: string
-                    description: 'Path to the build definition, e.g. "my folder/sub-folder".'
-            required:
-                - id
-                - name
-                - branches
-            type: object
-            additionalProperties: false
-        Space:
-            description: "Space is a logical container of build definitions. For most servers, space will map to a project or source control repository.\n\nCatLight apps exchange information about build investigations on space level. If your server has thousands of build definitions, put them into separate spaces to avoid performance problems."
-            properties:
-                id:
-                    type: string
-                    description: 'Space id should be unique on the server.'
-                name:
-                    type: string
-                    description: 'Display name'
-                buildDefinitions:
-                    items:
-                        $ref: '#/components/schemas/BuildDefinition'
-                    type: array
-                webUrl:
-                    type: string
-                    description: 'Url of the space page.'
-            required:
-                - id
-                - name
-                - buildDefinitions
-            type: object
-            additionalProperties: false
-        Server:
-            properties:
-                protocol:
-                    type: string
-                    enum:
-                        - 'https://catlight.io/protocol/v1.0/basic'
-                    nullable: false
-                    description: 'Constant string that defines the version and mode of CatLight protocol.'
-                id:
-                    type: string
-                    description: "Globally unique server id.\n\nServer id must be globally unique and should not change.\n\n# How to choose server id?\nFor online services, you can use your domain name, e.g. \"myserver.com\"\nFor installed servers, use your domain or product name + unique installation id. For example, \"myserver.com/3A5126E7-EE74-48E4-9997-1C1DE52BA711\". If your server does not have unique id, you can generate a GUID during installation and save it to configuration file.\n\nTry to keep the id shorter than 100 symbols. If your server has a built-in unique id that is very long, you can use a hash sum of it that should be shorter."
-                name:
-                    type: string
-                    description: 'Display name of the server that is shown to the user.'
-                spaces:
-                    items:
-                        $ref: '#/components/schemas/Space'
-                    type: array
-                webUrl:
-                    type: string
-                    description: 'Url of the main server page.'
-                serverVersion:
-                    type: string
-                currentUser:
-                    $ref: '#/components/schemas/User'
-                    description: 'Currently logged-in user. If it is absent, build investigation feature will not be available.'
-            required:
-                - protocol
-                - id
-                - name
-                - spaces
-            type: object
-            additionalProperties: false
-        BasicBuildInfoResponse:
-            $ref: '#/components/schemas/Server'
-        BuildDefinitionMetadata:
-            properties:
-                id:
-                    type: string
-                    description: 'Id should be unique in parent space.'
-                name:
-                    type: string
-                    description: 'Display name'
-                webUrl:
-                    type: string
-                    description: 'Webpage that provides user with detailed information about this build definition.'
-                folder:
-                    type: string
-                    description: 'Path to the build definition, e.g. "my folder/sub-folder".'
-            required:
-                - id
-                - name
-            type: object
-            additionalProperties: false
-        SpaceMetadata:
-            description: "Space is a logical container of build definitions. For most servers, space will map to a project or source control repository.\n\nCatLight apps exchange information about build investigations on space level. If your server has thousands of build definitions, put them into separate spaces to avoid performance problems."
-            properties:
-                id:
-                    type: string
-                    description: 'Space id should be unique on the server.'
-                name:
-                    type: string
-                    description: 'Display name'
-                buildDefinitions:
-                    items:
-                        $ref: '#/components/schemas/BuildDefinitionMetadata'
-                    type: array
-                webUrl:
-                    type: string
-                    description: 'Url of the space page.'
-            required:
-                - id
-                - name
-                - buildDefinitions
-            type: object
-            additionalProperties: false
-        ServerMetadata:
-            properties:
-                protocol:
-                    type: string
-                    enum:
-                        - 'https://catlight.io/protocol/v1.0/dynamic'
-                    nullable: false
-                    description: 'Constant string that defines the version and mode of CatLight protocol.'
-                id:
-                    type: string
-                    description: "Globally unique server id.\n\nServer id must be globally unique and should not change.\n\n# How to choose server id?\nFor online services, you can use your domain name, e.g. \"myserver.com\"\nFor installed servers, use your domain or product name + unique installation id. For example, \"myserver.com/3A5126E7-EE74-48E4-9997-1C1DE52BA711\". If your server does not have unique id, you can generate a GUID during installation and save it to configuration file.\n\nTry to keep the id shorter than 100 symbols. If your server has a built-in unique id that is very long, you can use a hash sum of it that should be shorter."
-                name:
-                    type: string
-                    description: 'Display name of the server that is shown to the user.'
-                spaces:
-                    items:
-                        $ref: '#/components/schemas/SpaceMetadata'
-                    type: array
-                webUrl:
-                    type: string
-                    description: 'Url of the main server page.'
-                serverVersion:
-                    type: string
-                currentUser:
-                    $ref: '#/components/schemas/User'
-                    description: 'Currently logged-in user. If it is absent, build investigation feature will not be available.'
-            required:
-                - protocol
-                - id
-                - name
-                - spaces
-            type: object
-            additionalProperties: false
-        DynamicBuildInfoMetadataResponse:
-            $ref: '#/components/schemas/ServerMetadata'
         BuildDefinitionStateResponse:
             properties:
                 id:
@@ -403,21 +321,6 @@ info:
         name: tsimbalar
 openapi: 3.0.0
 paths:
-    /basic:
-        get:
-            operationId: GetBasicBuildInfo
-            responses:
-                '200':
-                    description: Ok
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/BasicBuildInfoResponse'
-            security:
-                -
-                    bearerAuth:
-                        - repo
-            parameters: []
     /builds:
         get:
             operationId: GetMetadata
@@ -528,30 +431,6 @@ paths:
                     application/json:
                         schema:
                             $ref: '#/components/schemas/DynamicFilteredBuildInfoRequest'
-    /examples/basic/basic:
-        get:
-            operationId: GetBasicExample
-            responses:
-                '200':
-                    description: Ok
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/BasicBuildInfoResponse'
-            security: []
-            parameters: []
-    /examples/basic/multi-space:
-        get:
-            operationId: GetBasicMultispaceExample
-            responses:
-                '200':
-                    description: Ok
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/BasicBuildInfoResponse'
-            security: []
-            parameters: []
     /examples/dynamic:
         get:
             operationId: GetServerMetadata
