# src/api/api-types.ts
@@ -3,9 +3,7 @@ import {
   ServerStateRequest,
   ServerStateResponse,
 } from '../catlight-protocol/dynamic';
-import { Server } from '../catlight-protocol/basic';
 
-export type BasicBuildInfoResponse = Server;
 export type DynamicBuildInfoMetadataResponse = ServerMetadata;
 export type DynamicFilteredBuildInfoRequest = ServerStateRequest;
 export type DynamicFilteredBuildInfoResponse = ServerStateResponse;
